# cosmetic-inci-bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py
data/: LICENSE-BEAUTEE.md  allergens.json  annex_details.json  beneficial.json  comedogenic.json  functions.json  inci_dict.csv  irritants.json  products.json  regulatory.json  synonyms.json
scripts/: build_annex_details.py  build_functions.py  build_products.py  build_regulatory.py
src/bot/: formatting.py  healthcheck.py  keyboards.py  main.py  media.py  states.py
src/bot/handlers/: analyze.py  photo.py  product.py  profile.py  start.py
src/bot/middlewares/: rate_limit.py
src/core/: config.py  db.py  enums.py  models.py  repositories.py
src/services/: analogs.py  analyzer.py  cosing.py  ingredients_db.py  local_products.py  ocr.py  parser.py  product_search.py  pubchem.py  skinsignal.py
tests/: conftest.py  test_analogs.py  test_analyzer.py  test_local_products.py  test_parser.py  test_product_search.py  test_pubchem.py  test_rate_limit.py  test_skinsignal.py
tests/fixtures/: skinsignal_niacinamide.html
